--- a/resume/index.html
+++ b/resume/index.html
@@ -59,19 +59,17 @@ ul {
     }
 
     .work-section {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      display: flex;  
       gap: 30px; 
-      margin: 10px 0;
-}
-
-    .work-img {
-      display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 60%;
+      justify-content: center;
     }
+    img:hover {
+    transform:scale(1.1);
+    transition: .2s;
+    }
+
     </style>
 </head>
 
@@ -118,23 +116,23 @@ ul {
     <h2>Work Samples</h2>
     <div class="work-section">
         <div class="work-item">
-            <img src="samples/VintageSpacePoster.png" alt="VintageSpacePoster" class="work-img">
+            <a href=space.html><img src="samples/VintageSpacePoster200.png" alt="VintageSpacePoster"></a>
         </div>
 
         <div class="work-item">
-            <img src="samples/GothClouds.jpg" alt="GothCloudsDesign" class="work-img">
+            <a href=gothclouds.html><img src="samples/GothClouds200.png" alt="GothCloudsDesign"></a>
         </div>
 
         <div class="work-item">
-            <img src="samples/Hunter.jpg" alt="HunterDesign" class="work-img">
+            <a href=hunter.html><img src="samples/Hunter200.png" alt="HunterDesign"></a>
         </div>
 
         <div class="work-item">
-            <img src="samples/character.png" alt="AnimalCrossingIllustration" class="work-img">
+            <a href=fauna.html><img src="samples/character200.png" alt="FaunaIllustration"></a>
         </div>
 
         <div class="work-item">
-            <img src="samples/Home_WordArt.png" alt="HomeWordArt" class="work-img">
+            <a href=wordart.html><img src="samples/Home_WordArt200.png" alt="HomeWordArt"></a>
         </div>
     </div>    
 </section>
